# diviora-kernel

./: .env.example  .gitignore  KERNEL_CI_AND_OPERATOR_GUARDRAILS_REPORT.md  KERNEL_DEEP_AGENT_LANES_REPORT.md  KERNEL_DOMAIN_CONTRACT_VERIFICATION_REPORT.md  KERNEL_PACKS_AND_PACKBUILD_REPORT.md  KERNEL_REAL_DEEPAGENTS_INTEGRATION_REPORT.md  KERNEL_V0_IMPLEMENTATION_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: approval_yes.json  code_task.json  decision_memo_api_layer.json  decision_memo_diviora_offer_pricing.json  research_task.json
examples/output_sample/: decision_memo.md
src/diviora_kernel/: __init__.py  approvals.py  artifacts.py  cli.py  execution.py  ledger.py  packs.py  planning.py  schemas.py  state.py  verification.py
src/diviora_kernel/lanes/: __init__.py  base.py  coding_lane.py  deep_agent_base.py  executive_lane.py  research_lane.py
src/diviora_kernel/workers/: base.py  llm_worker.py  shell_worker.py
src/pydantic/: __init__.py
src/pydantic_ai/: __init__.py
src/pydantic_ai/models/: __init__.py  test.py
tests/: test_cli.py  test_deep_agent_lanes.py  test_domain_contract_verification.py  test_kernel_flow.py  test_packs.py
